fix(style): fix line numbers covering textarea in edit mode

--- a/public/application.css
+++ b/public/application.css
@@ -83,6 +83,7 @@ textarea {
     outline: none;
     resize: none;
     font-size: 13px;
+    position: relative;
 }
 
 .lines {
